# districtdrift

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  WORK_LOG.md  pyproject.toml
.github/workflows/: link-checker.yml
pipeline/: config.py  demographics.py  download.py  export_geo.py  nation.py  precinct.py  process.py  tile.py
scripts/: check_links.py  report_links.py  update_work_log.py
web/: README.md  _headers  package-lock.json  package.json  svelte.config.js  vite.config.ts  wrangler.toml
web/functions/: feedback-submit.ts
web/scripts/: mobile-preview.js  og-image.js
web/src/: app.css  app.d.ts  app.html  hooks.server.ts
web/src/lib/: CompetitivenessChart.svelte  EGChart.svelte  FeedbackModal.svelte  Map.svelte  NationView.svelte  Pill.svelte  SeatVoteChart.svelte  Tooltip.svelte  TrendChart.svelte  breakpoints.ts  colors.ts  events.ts  strings.ts
web/src/routes/: +layout.svelte  +page.svelte
web/static/: _headers  ak_stats.json  al_stats.json  ar_stats.json  az_stats.json  ca_stats.json  co_stats.json  ct_stats.json  de_stats.json  fl_stats.json  ga_stats.json  hi_stats.json  ia_stats.json  id_stats.json  il_stats.json  in_stats.json  ks_stats.json  ky_stats.json  la_stats.json  ma_stats.json  md_stats.json  me_stats.json  mi_stats.json  mn_stats.json  mo_stats.json  ms_stats.json  mt_stats.json  nation_stats.json  nc_stats.json  nd_stats.json  ne_stats.json  nh_stats.json  nj_stats.json  nm_stats.json  nv_stats.json  ny_stats.json  oh_stats.json  ok_stats.json  or_stats.json  pa_stats.json  (+14 more)
(+262 files in other folders)
